fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  type: NodePort  # uses Random algorithm for load balancing
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30004  # optional
  selector:
    app: fastapi  # this is how we connect the service to a specific pod
    type: stateless
